test/typeerrors/Examples/NestedLets.hs
-- stress test for chunky solver
-- Note: this program is well-typed
main a = show $ 
   let b = a 
   in let c = b
      in a